force-app/main/default/objects/Swipe_Event__c/Swipe_Event__c.object-meta.xml
<CustomObject>
    <description>Tracks candidate swipe actions on employers</description>
    <label>Swipe Event</label>
    <nameField>
        <displayFormat>SWIPE-{000000}</displayFormat>
        <label>Swipe Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swipe Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>