force-app/main/default/objects/Swipe_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Employer swiped on</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Swipe Events</relationshipLabel>
    <relationshipName>Swipe_Events</relationshipName>
    <type>Lookup</type>
</CustomField>