force-app/main/default/objects/Swipe_Event__c/fields/Added_To_Pool__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If added to talent pool</description>
    <label>Added To Pool</label>
    <type>Checkbox</type>
</CustomField>