force-app/main/default/objects/Swipe_Event__c/fields/Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member__c</fullName>
    <description>Resulting pool membership (CampaignMember ID)</description>
    <label>Campaign Member</label>
    <length>18</length>
    <type>Text</type>
</CustomField>