force-app/main/default/objects/Swipe_Event__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Swipe Events (Candidate)</relationshipLabel>
    <relationshipName>Swipe_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>