force-app/main/default/objects/Swipe_Event__c/fields/Card_Flipped__c.field-meta.xml
<CustomField>
    <fullName>Card_Flipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If detailed view seen</description>
    <label>Card Flipped</label>
    <type>Checkbox</type>
</CustomField>