force-app/main/default/objects/Swipe_Event__c/fields/Card_View_Duration_Sec__c.field-meta.xml
<CustomField>
    <fullName>Card_View_Duration_Sec__c</fullName>
    <description>How long viewed</description>
    <label>Card View Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>