force-app/main/default/objects/Swipe_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Candidate who swiped</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Swipe Events</relationshipLabel>
    <relationshipName>Swipe_Events</relationshipName>
    <type>Lookup</type>
</CustomField>