force-app/main/default/objects/Swipe_Event__c/fields/Employers__c.field-meta.xml
<CustomField>
    <fullName>Employers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Swipe Events (Employers)</relationshipLabel>
    <relationshipName>Swipe_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>