force-app/main/default/objects/Swipe_Event__c/fields/Is_Undone__c.field-meta.xml
<CustomField>
    <fullName>Is_Undone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Undone</label>
    <type>Checkbox</type>
</CustomField>