force-app/main/default/objects/Swipe_Event__c/fields/League_Membership__c.field-meta.xml
<CustomField>
    <fullName>League_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>League Membership</label>
    <referenceTo>League_Membership__c</referenceTo>
    <relationshipLabel>Swipe Events</relationshipLabel>
    <relationshipName>Swipe_Events</relationshipName>
    <type>Lookup</type>
</CustomField>