force-app/main/default/objects/Swipe_Event__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>Why interested/not</description>
    <label>Sentiment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>