force-app/main/default/objects/Swipe_Event__c/fields/Sentiment_Tags__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Tags__c</fullName>
    <description>Predefined reasons</description>
    <label>Sentiment Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Culture Fit</fullName>
            </value>
            <value>
                <fullName>Interesting Role</fullName>
            </value>
            <value>
                <fullName>Good Compensation</fullName>
            </value>
            <value>
                <fullName>Growth Opportunity</fullName>
            </value>
            <value>
                <fullName>Location Preference</fullName>
            </value>
            <value>
                <fullName>Remote Work</fullName>
            </value>
            <value>
                <fullName>Company Reputation</fullName>
            </value>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Wrong Industry</fullName>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>