force-app/main/default/objects/Swipe_Event__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Related chat session</description>
    <label>Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>