force-app/main/default/objects/Swipe_Event__c/fields/Undo_Applied__c.field-meta.xml
<CustomField>
    <fullName>Undo_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If user undid the swipe</description>
    <label>Was Undone</label>
    <type>Checkbox</type>
</CustomField>