force-app/main/default/objects/Swipe_Event__c/fields/Undo_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Undo_Timestamp__c</fullName>
    <label>Undo Timestamp</label>
    <type>DateTime</type>
</CustomField>