force-app/main/default/objects/Swipe_Event__c/fields/Undone__c.field-meta.xml
<CustomField>
    <fullName>Undone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If swipe was undone</description>
    <label>Undone</label>
    <type>Checkbox</type>
</CustomField>