force-app/main/default/objects/Swipe_Event__c/fields/Undone_At__c.field-meta.xml
<CustomField>
    <fullName>Undone_At__c</fullName>
    <description>When undone</description>
    <label>Undone At</label>
    <type>DateTime</type>
</CustomField>